# pakr-rawata

./: Cargo.toml  LICENSE  build.rs
.cargo/: config
c-bindings/: freebsd_ata.h
src/: freebsd.rs  lib.rs  linux.rs
